** Visit  https://github.com/wtrdrnkr/pyrecon  for additional detail **
***********************************************************************
		-------------
		Version 1.3.2
		-------------
		*tools.classes.Contour
			-self.overlaps()
				-moved threshold variable to parameter, with default 1+2**(-17)
				-added a checker for Contour._shape population
		*removed wild-card imports, removed unused imports
		*new renameFRI.py
		*tools.mergeTool:
			-added sameName parameter to checkOverlappingContours() and separateOverlappingContours(), with default True
		
		-------------
		Version 1.3.1
		-------------
		*tools.findCalFactor
			- rmt.getSeries() -> classes.loadSeries()
	
	+++++++++++++
	Version 1.3.0
	+++++++++++++
	*tools.classes:
		- Implemented a new rObject class w/ specific data depending on trace type
	*tools.excelTool:
		- Implemented more robust excelTool
	*tools.reScale:
		- getSeries -> loadSeries
			
		-------------
		Version 1.2.2
		-------------
		*Removed pause in toosl.excelTool.getDendriteDict()
		*Removed some extra verbose code
		*Added some comments
		
		-------------
		Version 1.2.1
		-------------
		*tools.excelTool will now name sheets based on the 5 first characters of the .ser file name (openpyxl module doesnt allow creation of pages with a name >~30 characters)
		
	+++++++++++++
	Version 1.2.0
	+++++++++++++
	*tools.classes.Series.getObjectLists()
		- removed $ cap from d## matching -> makes a sheet for d## even if it contains no protrusions
	*tools.classes.Series.getObjectHierarchy()
		- added output to show ignored objects
	*tools.excelTool.getDendriteDict()
		- implemented a filter to filter regex in self.filters
		- added regex to filter objects containing a space+word after the conventional name
			- (e.g. 'd17sp09 copy' and 'd19rh37 total' are filtered)
	*tools.excelTool.getProtrusionSpacing()
		- NEEDS A BETTER METHOD FOR IDENTIFYING PROTRUSION CHILDREN, soon