@@ -1,5 +1,5 @@
 #!/usr/bin/python
-import argparse
+import argparse, re
 parser = argparse.ArgumentParser(description='Renames objects in a series to match a specified series, based on overlapping sections in a specified section number')
 parser.add_argument('Series 1', metavar='s1', nargs=1, type=str, help='[string] Path to series 1')
 parser.add_argument('Series 2', metavar='s2', nargs=1, type=str, help='[string] Path to series 2')
@@ -25,13 +25,34 @@ def main(series1Path, series2Path, ovlpingSec, renameTo=1, savePath='./renameFRI
     print
     print('Renaming ovlping objects to match: '+namingTo+' based on section: '+str(ovlpingSec))
     
+    # Organize contours based on name
+    ax = re.compile('a[0-9]{1,}_[a-z]{0,}$')
+    axons1 = [cont for cont in conts1 if ax.match(cont.name) != None]
+    axons2 = [cont for cont in conts2 if ax.match(cont.name) != None]
+    
+    dend = re.compile('d[0-9]{1,}_[a-z]{0,}$', re.IGNORECASE)
+    dends1 = [cont for cont in conts1 if dend.match(cont.name) != None]
+    dends2 = [cont for cont in conts2 if dend.match(cont.name) != None]
+    
+    prot = re.compile('d[0-9]{1,}p[0-9]{0,}', re.IGNORECASE)
+    prots1 = [cont for cont in conts1 if prot.match(cont.name) != None]
+    prots2 = [cont for cont in conts2 if prot.match(cont.name) != None]
+    
+    glia1 = []
+    glia2 = []
+    
     # Gather overlapping contours
     ovlpsA, ovlpsB = mergeTool.checkOverlappingContours(conts1, conts2, sameName=False) # Don't base on same name only
-    print('chkOvlp:\n'+str(ovlpsA)+'\n'+str(ovlpsB))
+    print('chkOvlp:\n'+str([cont.name for cont in ovlpsA])+'\n'+str([cont.name for cont in ovlpsB]))
     
     # Separate overlapping contours into complete overlaps vs conflicting overlaps
     completeOvlps, conflictingOvlps = mergeTool.separateOverlappingContours(ovlpsA, ovlpsB, sameName=False)
-    print('sepOvlps:\n'+str(completeOvlps)+'\n'+str(conflictingOvlps))
+    print('compOvlps:')
+    for item in completeOvlps:
+        print [thing.name for thing in item]
+    print('confOvlps:')
+    for item in conflictingOvlps:
+        print [thing.name for thing in item]
     
 if __name__ == '__main__':
     print ('name == __main__')
